Fixed responsivity with the likes and views being too big in the mobile version.

--- a/questions/css/mobile.css
+++ b/questions/css/mobile.css
@@ -26,7 +26,23 @@
   .dropContent a {
     font-size: 32;
   }
+  .likesContainer {
+    margin: 0 0 0 5%;
+  }
+  .viewsContainer {
+    margin: 0 0 0 5%;
+  }
+  .story .info {
+    width: 100%;
+  }
   .cRight {
     font-size: 12px;
+  }
+  .story .tags {
+    border-radius: 1rem;
+    color: white;
+    width: 5rem;
+    height: 1.5rem;
+    margin: 1rem 0.2rem 0 2rem;
   }
 }
