--- a/storys/css/mobile.css
+++ b/storys/css/mobile.css
@@ -33,9 +33,6 @@
   .dropContent a {
     font-size: 32;
   }
-  .cRight {
-    font-size: 12px;
-  }
   .likesContainer {
     margin: 0 0 0 5%;
   }
